# pinocc

./: Cargo.toml
src/: lib.rs  main.rs
src/building_block/curves/bls12_381/: pairing.rs
src/exlib/curves/: mod.rs  weierstrass_eq.rs
src/exlib/curves/bls12_381/: fq1.rs  fq12.rs  fq2.rs  fq6.rs  fq_test_helper.rs  g12_point.rs  g1_point.rs  g2_point.rs  gt_point.rs  pairing.rs  params.rs  private_key.rs  rational_function.rs  signature.rs
src/exlib/curves/secp256k1/: affine_point.rs  affine_points.rs  ecdsa.rs
src/exlib/field/: polynomial.rs  prime_field.rs  prime_field_elem.rs  prime_field_elems.rs  sparse_matrix.rs  sparse_vec.rs
src/zk/: mod.rs
src/zk/pinocchio/: crs.rs  proof.rs  prover.rs  verifier.rs  witness.rs
src/zk/qap/: constraint.rs  equation_parser.rs  gate.rs  qap.rs  r1cs.rs  r1cs_tmpl.rs  term.rs
src/zk/qap/gates/: adder.rs  arith_circuit.rs  bool_circuit.rs
