[package]
name = "Pinocchio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Pinocchio"
path = "src/main.rs"

[dependencies]
bitvec = "1"
hex = "0.4.3"
nom = "7.1.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2"
once_cell = "1.18.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
